Next and previous button mobile fix

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -137,6 +137,7 @@
         .carousel{
             height: 100vh;
             width: 100vw;
+            animation: none;
             .homeScene{
                 @include fullviewPort();
             }
